--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,8 +83,10 @@ jobs:
 #     Faraday CLI approach
     - name: Upload Reports to Faraday
       run: |
-        python -m pip install --upgrade pip
-        pip install faraday-cli
+        python --version
+        python3 --version
+        python3 -m pip install --upgrade pip
+        pip3 install faraday-cli
 #        faraday-cli --auth -f ${{ secrets.FARADAY_HOST }} -u ${{ secrets.FARADAY_USERNAME }} -p ${{ secrets.FARADAY_PASSWORD }}
 #        faraday-cli create_ws ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}-${{ github.run_number }}
 #        faraday-cli process_report -w ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}-${{ github.run_number }} bandit-report/flaskapp_faraday_bandit.xml
