--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,9 @@ jobs:
 #    needs: [scan]
     runs-on: ubuntu-latest
 
+    container:
+      image: python3.8
+
     steps:
     - name: Get current date
       id: date
