--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-      image: python3.8
+      image: python-latest
 
     steps:
     - name: Get current date
