Full github action with faraday cli approach

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
 
     container:
       image: python:3.9.1
-      options: --user root -v ${{ github.workspace }}:/reports/:rw
+      options: --user root -v ${{ github.workspace }}/reports:/reports/:rw
 
     steps:
     - name: Get current date
@@ -90,8 +90,8 @@ jobs:
         pip install faraday-cli
         faraday-cli auth -f ${{ secrets.FARADAY_HOST }} -u ${{ secrets.FARADAY_USERNAME }} -p ${{ secrets.FARADAY_PASSWORD }}
         faraday-cli create_ws ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}-${{ github.run_number }}
-        faraday-cli process_report -w ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}-${{ github.run_number }} reports/flaskapp_faraday_bandit.xml
-        faraday-cli process_report -w ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}-${{ github.run_number }} reports/zap-report.xml
+        faraday-cli process_report -w ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}-${{ github.run_number }} /reports/flaskapp_faraday_bandit.xml
+        faraday-cli process_report -w ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}-${{ github.run_number }} /reports/zap-report.xml
 
 #     Custom GHA approach
 #    - name: Upload Reports to Faraday
