--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          echo ${{ secrets.HEROKU_APP_NAME }}
+          echo ${{ secrets.ZAP_SCAN_URL }}
 
       - name: Run Bandit (Python code checker)
         run: bandit -r . -f xml -o flaskapp_faraday_bandit.xml || true
