--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          echo ${{ secrets.HEROKU_APP_NAME }}
-          echo ${{ secrets.ZAP_SCAN_URL }}
+          echo ${{ secrets.HEROKU_APP_NAME }} >> /tmp/test
+          echo ${{ secrets.ZAP_SCAN_URL }  >> /tmp/test
+          cat /tmp/test 
 
       - name: Run Bandit (Python code checker)
         run: bandit -r . -f xml -o flaskapp_faraday_bandit.xml || true
