--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           echo ${{ secrets.HEROKU_APP_NAME }} >> /tmp/test
-          echo ${{ secrets.ZAP_SCAN_URL }  >> /tmp/test
+          echo ${{ secrets.ZAP_SCAN_URL }}  >> /tmp/test
           cat /tmp/test 
 
       - name: Run Bandit (Python code checker)
